objects/Contact.object
<CustomObject>
    <fields>
        <fullName>ALSD_Rep__c</fullName>
        <label>ALSD Rep</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVF_GIID_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AVF/GIID Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AV_Code__c</fullName>
        <label>AV Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_No__c</fullName>
        <label>Account #</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Address Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Age_Verification_Source__c</fullName>
        <label>Age Verification Source</label>
        <picklist>
            <picklistValues>
                <fullName>Lexis Nexis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCNLookup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GIID</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Age_Verified_Date__c</fullName>
        <label>Age Verified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apt_Lot__c</fullName>
        <label>Apt / Lot</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ArchiveFlag__c</fullName>
        <description>For outbound Feed. HardCode empty value.</description>
        <formula>&apos;&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Archive Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Birthdate1__c</fullName>
        <encrypted>true</encrypted>
        <label>Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Birthdate__c</fullName>
        <encrypted>true</encrypted>
        <label>DOB</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCN__c</fullName>
        <encrypted>true</encrypted>
        <label>CCN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <encrypted>true</encrypted>
        <label>City  / Locality</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>United States</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bonaire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia-Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <description>Feed Outbound - Date Format.</description>
        <formula>MID( TEXT(CreatedDate) , 6, 2)+&quot;-&quot;+MID( TEXT(CreatedDate) , 9, 2)+&quot;-&quot;+MID( TEXT(CreatedDate) , 0, 4) + &quot; &quot;+MID(TEXT(CreatedDate), 11, 9)</formula>
        <label>Created Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedSource__c</fullName>
        <description>Feed Outbound - HardCode NULL Value</description>
        <formula>&apos;NULL&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerConsumer__c</fullName>
        <description>Feed Outbound -  Customer Type on basis Record Type. &quot;CONS&quot; &amp; &quot;CUST&quot;.</description>
        <formula>IF( RecordTypeId==&apos;01236000000nUA1&apos; , &apos;CONS&apos;,&apos;CUST&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CustomerConsumer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerID__c</fullName>
        <displayFormat>{00000}</displayFormat>
        <label>Customer ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Customer_Detail_ID__c</fullName>
        <description>Feed Outbound.</description>
        <displayFormat>{0000000}</displayFormat>
        <label>Customer Detail ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <label>Customer Type</label>
        <picklist>
            <picklistValues>
                <fullName>PM EMPLOYEE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GOV AGENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATTORNEY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTHER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALTRIA EMPL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JMC EMPL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USSTC EMPL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONSUMER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wholesaler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retailer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Sales Force</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DBA_Name__c</fullName>
        <label>DBA Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direct_Purchase__c</fullName>
        <label>Direct Purchase</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <encrypted>true</encrypted>
        <label>Email Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EnvCode__c</fullName>
        <description>Feed Outbound - Hardcode value</description>
        <formula>&apos;DEV&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EnvCode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <description>Feed Outbound - Empty Value</description>
        <formula>&apos;&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gender</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hours_of_operation__c</fullName>
        <label>Hours of operation</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Primary__c</fullName>
        <description>Feed Outbound - Hardcode value</description>
        <formula>IF(CreatedDate==LastModifiedDate, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Primary</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <description>Feed Outbound - Date Format.</description>
        <formula>MID( TEXT(LastModifiedDate) , 6, 2)+&quot;-&quot;+MID( TEXT(LastModifiedDate) , 9, 2)+&quot;-&quot;+MID( TEXT(LastModifiedDate) , 0, 4) + &quot; &quot;+MID(TEXT(LastModifiedDate), 11, 9)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MiddleInitial__c</fullName>
        <description>Feed Outbound - Hard Code Empty value.</description>
        <formula>&apos;&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Middle Initial</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MiddleName__c</fullName>
        <description>For Feed only - Empty Value</description>
        <formula>&apos;&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Middle Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ModifiedSource__c</fullName>
        <description>Feed Outbound - NULL Value</description>
        <formula>&apos;NULL&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Modified Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operating_Company__c</fullName>
        <label>Operating Company</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProfileUpdType__c</fullName>
        <description>Feed Outbound - Hard Code Value. Pending from brian.</description>
        <formula>&apos;NEW&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProfileUpdType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordType__c</fullName>
        <description>Feed Outbound - Hard code value.</description>
        <formula>&apos;CONTACTINFO&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RecordType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Repeat_Complainer_Date__c</fullName>
        <label>Repeat Complainer Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Repeat_Complainer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Repeat Complainer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RequestId__c</fullName>
        <label>RequestId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retail_control__c</fullName>
        <label>Retail Control #</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <encrypted>true</encrypted>
        <label>State / Province</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StatusCode__c</fullName>
        <label>StatusCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StatusMessage__c</fullName>
        <label>StatusMessage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store__c</fullName>
        <label>Store #</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <encrypted>true</encrypted>
        <label>Street Address / Address1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suffix__c</fullName>
        <label>Suffix</label>
        <picklist>
            <picklistValues>
                <fullName>JR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>II</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>III</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VII</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TenantId__c</fullName>
        <formula>&apos;ALORICAALTRIA&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TenantId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <label>FSF Territory #</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Verify_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verify Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zip4__c</fullName>
        <description>Outbound Feed - Hard code null value.</description>
        <formula>&apos;NULL&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zip4</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <encrypted>true</encrypted>
        <label>Zip Code / Postal code</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>CustomerID__c</columns>
        <columns>FULL_NAME</columns>
        <columns>Zip_Code__c</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>Age_Verification_Source__c</columns>
        <columns>AVF_GIID_Received__c</columns>
        <columns>Age_Verified_Date__c</columns>
        <columns>Repeat_Complainer__c</columns>
        <columns>Operating_Company__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Consumer</fullName>
        <active>true</active>
        <label>Consumer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Trade_Customer</fullName>
        <active>true</active>
        <label>Trade Customer</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Alternate_Telephone</fullName>
        <active>true</active>
        <errorConditionFormula>OR( 
(AND(OtherPhone !=NULL, ISPICKVAL(Country__c, &apos;United States&apos;) , OR(LEN(OtherPhone)&gt;14,LEN(OtherPhone)&lt;10))), 
(AND( NOT(ISPICKVAL(Country__c, &apos;United States&apos;)) ,LEN(OtherPhone)&lt;10,OtherPhone !=NULL)), 
(AND(OtherPhone !=NULL ,ISPICKVAL(Country__c, &apos;United States&apos;), LEN(OtherPhone)=14, NOT(REGEX(OtherPhone,&quot;((\\(\\d{3}\\) ?)|(\\d{3}-))?\\d{3}-\\d{4}&quot;)))), 
(AND(OtherPhone !=NULL ,ISPICKVAL(Country__c, &apos;United States&apos;), LEN(OtherPhone)=10, NOT(REGEX(OtherPhone ,&quot;^[0-9]*$&quot;)))), 
(AND(OtherPhone !=NULL ,ISPICKVAL(Country__c, &apos;United States&apos;), LEN(OtherPhone) &gt;10, LEN(OtherPhone) &lt;14)) 
)</errorConditionFormula>
        <errorMessage>Alternate Telephone: Please enter valid 10 digit Alternate Telephone.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DOB</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISCHANGED(Birthdate1__c), 
IF( (FLOOR((TODAY() -  Birthdate1__c)/365.2425))  &lt;  21, TRUE, FALSE))</errorConditionFormula>
        <errorMessage>Invalid Date Of Birth. Not qualifying minimum age requirement.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MobilePhone</fullName>
        <active>true</active>
        <errorConditionFormula>OR( 
(AND(MobilePhone !=NULL, ISPICKVAL(Country__c, &apos;United States&apos;) , OR(LEN(MobilePhone)&gt;14,LEN(MobilePhone)&lt;10))), 
(AND( NOT(ISPICKVAL(Country__c, &apos;United States&apos;)) ,LEN(MobilePhone)&lt;10,MobilePhone !=NULL)), 
(AND(MobilePhone !=NULL ,ISPICKVAL(Country__c, &apos;United States&apos;), LEN(MobilePhone)=14, NOT(REGEX(MobilePhone,&quot;((\\(\\d{3}\\) ?)|(\\d{3}-))?\\d{3}-\\d{4}&quot;)))), 
(AND(MobilePhone !=NULL ,ISPICKVAL(Country__c, &apos;United States&apos;), LEN(MobilePhone)=10, NOT(REGEX(MobilePhone ,&quot;^[0-9]*$&quot;)))), 
(AND(MobilePhone !=NULL ,ISPICKVAL(Country__c, &apos;United States&apos;), LEN(MobilePhone) &gt;10, LEN(MobilePhone) &lt;14)) 
)</errorConditionFormula>
        <errorMessage>Mobile Phone: Please enter valid 10 digit Mobile Phone.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Phone_Number</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
(AND(Phone !=NULL, ISPICKVAL(Country__c, &apos;United States&apos;) , OR(LEN(Phone)&gt;14,LEN(Phone)&lt;10))),
(AND( NOT(ISPICKVAL(Country__c, &apos;United States&apos;)) ,LEN(Phone)&lt;10,Phone !=NULL)),
(AND(Phone !=NULL ,ISPICKVAL(Country__c, &apos;United States&apos;), LEN(Phone)=14, NOT(REGEX(Phone,&quot;((\\(\\d{3}\\) ?)|(\\d{3}-))?\\d{3}-\\d{4}&quot;)))),
(AND(Phone !=NULL ,ISPICKVAL(Country__c, &apos;United States&apos;), LEN(Phone)=10, NOT(REGEX(Phone ,&quot;^[0-9]*$&quot;)))),
(AND(Phone !=NULL ,ISPICKVAL(Country__c, &apos;United States&apos;), LEN(Phone) &gt;10, LEN(Phone) &lt;14))
)</errorConditionFormula>
        <errorMessage>Telephone: Please enter a valid 10 digit Telephone.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RequiredField_Error_Consumer</fullName>
        <active>true</active>
        <errorConditionFormula>AND(RecordType.DeveloperName = &apos;Consumer&apos;,

IF( (FirstName==NULL) || ( LastName==NULL)||( Street_Address__c ==NULL) || ( Zip_Code__c == NULL), true, false))</errorConditionFormula>
        <errorMessage>Please enter value in required field(s).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RequiredField_Error_Field_Sale_Force</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(Customer_Type__c , &apos;Field Sales Force&apos;) , 

IF( (Company_Name__c==NULL) || ( Territory__c==NULL)||( Phone==NULL), true, false))</errorConditionFormula>
        <errorMessage>Please enter a value in required field(s).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RequiredField_Error_Trade_Retailer_Whole</fullName>
        <active>true</active>
        <errorConditionFormula>AND(or(ISPICKVAL(Customer_Type__c , &apos;Wholesaler&apos; ),ISPICKVAL(Customer_Type__c , &apos;Retailer&apos; )), 

IF( (Company_Name__c==NULL) || ( DBA_Name__c==NULL)||( Phone==NULL), true, false))</errorConditionFormula>
        <errorMessage>Please enter value in required field(s).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ValidDOB</fullName>
        <active>true</active>
        <errorConditionFormula>Birthdate1__c &gt;  TODAY()</errorConditionFormula>
        <errorMessage>Date Of Birth: Future Date Not Allowed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Verify_Address</fullName>
        <active>true</active>
        <errorConditionFormula>IF(  ISPICKVAL(Country__c, &quot;United States&quot;)   &amp;&amp; ( Address_Verified__c ==FALSE)&amp;&amp;( Verify_Address__c ==FALSE)&amp;&amp;   RecordType.DeveloperName  = &apos;Consumer&apos;, true, false)</errorConditionFormula>
        <errorMessage>Please verify address.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ZipCode_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>IF((RecordType.DeveloperName = &apos;Consumer&apos;)&amp;&amp; (City__c == NULL) &amp;&amp; (State__c==NULL) &amp;&amp; 
(ISPICKVAL(Country__c, &apos;United States&apos;)) , true, false)</errorConditionFormula>
        <errorMessage>Please enter valid zip code</errorMessage>
    </validationRules>
</CustomObject>